# infinity-express

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  TODO  imgui.ini  package-lock.json  package.json
candybox/: .clang-format  AABB.hpp  BVH.hpp  CMakeLists.txt  FSM.hpp  GJK.hpp  HSFM2.hpp  Heap.hpp  Hilbert.hpp  IntervalTree.hpp  Linear.hpp  LockLessMultiReadPipe.hpp  Macros.hpp  Memory.hpp  NonCopyable.hpp  README.md  Robinhood.hpp  Scene.hpp  TaskScheduler.hpp  Tween.hpp  VG_gl.hpp  VG_gl_utils.hpp  VG_sw.hpp  VG_vtex.hpp  easing.hpp  filesystem.hpp  fontstash.hpp  greatest.h  ref_ptr.hpp  simplify_path.hpp  smart_ptr.hpp  spatial.hpp  vector.hpp
candybox/_sources/: BVH.cpp  Color.cpp  Flex.cpp  Heap.cpp  Scene.cpp  TaskScheduler.cpp  Tween.cpp  VG.cpp  VG_gl_utils.cpp  simplify.cpp  spatial.cpp
candybox/_sources/gjk/: gjk.cpp  manifold.cpp  raycast.cpp  utils.cpp
candybox/externs/candybox/stb/: stb_image.h
candybox/include/candybox/: AABB.hpp  BVH.hpp  FSM.hpp  GJK.hpp  Heap.hpp  Hilbert.hpp  IntervalTree.hpp  Lazy.hpp  LockLessMultiReadPipe.hpp  Macros.hpp  Memory.hpp  NonCopyable.hpp  Robinhood.hpp  Scene.hpp  TaskScheduler.hpp  Tween.hpp  assert.hpp  bitwise_enum.hpp  bresenham.hpp  color.hpp  easing.hpp  filesystem.hpp  flex.hpp  fontstash.hpp  linear.hpp  optional.hpp  simplify_path.hpp  smart_ptr.hpp  spatial.hpp
candybox/include/candybox/detail/: aliases.hpp  in_place.hpp
candybox/include/candybox/vg/: VG.hpp  VG_gl.hpp  VG_gl_utils.hpp  VG_sw.hpp  VG_sw_utils.hpp  VG_vtex.hpp
candybox/sources/: BVH.cpp  Color.cpp  Heap.cpp  Scene.cpp  TaskScheduler.cpp  Tween.cpp  VG.cpp  VG_gl_utils.cpp  flex.cpp  simplify.cpp  spatial.cpp
candybox/sources/gjk/: gjk.cpp  manifold.cpp  raycast.cpp  utils.cpp
candybox/tests/: CMakeLists.txt  test_bitwise_enum.cpp  tests_spatial.cpp  tests_value_ptr.hpp  tests_vector.cpp
candybox/tests/FSM/: CMakeLists.txt  main.cpp
candybox/tests/optional/: CMakeLists.txt  assignment.cpp  bases.cpp  constexpr.cpp  constructors.cpp  emplace.cpp  extensions.cpp  hash.cpp  in_place.cpp  issues.cpp  main.cpp  make_optional.cpp  noexcept.cpp  nullopt.cpp  observers.cpp  relops.cpp  swap.cpp
candybox/tests/smart_ptr/: CMakeLists.txt  abi_test_lib.cpp  abi_test_main.cpp  allocate_local_shared_array_construct_test.cpp  allocate_local_shared_array_esft_test.cpp  allocate_local_shared_array_noinit_test.cpp  allocate_local_shared_array_test.cpp  allocate_local_shared_array_throws_test.cpp  allocate_local_shared_array_value_test.cpp  allocate_local_shared_arrays_test.cpp  allocate_local_shared_esft_test.cpp  allocate_local_shared_test.cpp  allocate_shared_alloc11_test.cpp  allocate_shared_array_construct_test.cpp  allocate_shared_array_esft_test.cpp  allocate_shared_array_noinit_test.cpp  allocate_shared_array_test.cpp  allocate_shared_array_throws_test.cpp  allocate_shared_array_value_test.cpp  allocate_shared_arrays_test.cpp  allocate_shared_construct11_test.cpp  allocate_shared_esft_test.cpp  allocate_shared_test.cpp  allocate_unique_aggregate_test.cpp  allocate_unique_args_test.cpp  allocate_unique_array_construct_test.cpp  allocate_unique_array_noinit_test.cpp  allocate_unique_array_test.cpp  allocate_unique_array_throws_test.cpp  allocate_unique_array_value_test.cpp  allocate_unique_arrays_test.cpp  allocate_unique_construct_test.cpp  allocate_unique_noinit_test.cpp  allocate_unique_test.cpp  allocate_unique_throws_test.cpp  allocate_unique_value_test.cpp  array_fail_ap_spa_a.cpp  array_fail_ap_spa_c.cpp  array_fail_ap_spa_ma.cpp  array_fail_ap_spa_mc.cpp  (+230 more)
candybox/tests/vector/: CMakeLists.txt  main.cpp
include/: CellAutomata.hpp  DebugDraw.hpp  Main.hpp  World.hpp
include/Generator/: CellAutomata.hpp
include/Physics/: DebugDraw.hpp  World.hpp
include/Scenes/: Main.hpp
include/utils/: AABB.hpp  Array.hpp  BVH.hpp  Color.hpp  Easing.hpp  FSM.hpp  Flex.hpp  GJK.hpp  IntervalTree.hpp  Lazy.hpp  Linear.hpp  LockLessMultiReadPipe.hpp  Macros.hpp  Memory.hpp  Optional.hpp  README.md  Robinhood.hpp  Scene.hpp  Spatial.hpp  VG.hpp  VG_gl.hpp  VG_gl_utils.hpp  VG_sw.hpp  VG_vtex.hpp  bitwise_enum.hpp  bresenham.hpp  color.hpp  fontstash.hpp  optional.hpp  (+6 more)
src/: CellAutomata.cpp  DebugDraw.cpp  main.cpp
tests/: CMakeLists.txt  test_bitwise_enum.cpp  tests_spatial.cpp  tests_vector.cpp
tests/optional/: CMakeLists.txt  assignment.cpp  bases.cpp  constexpr.cpp  constructors.cpp  emplace.cpp  extensions.cpp  hash.cpp  in_place.cpp  issues.cpp  main.cpp  make_optional.cpp  noexcept.cpp  nullopt.cpp  observers.cpp  relops.cpp  swap.cpp
tests/smart_ptr/: CMakeLists.txt  abi_test_lib.cpp  abi_test_main.cpp  allocate_local_shared_array_construct_test.cpp  allocate_local_shared_array_esft_test.cpp  allocate_local_shared_array_noinit_test.cpp  allocate_local_shared_array_test.cpp  allocate_local_shared_array_throws_test.cpp  allocate_local_shared_array_value_test.cpp  allocate_local_shared_arrays_test.cpp  allocate_local_shared_esft_test.cpp  allocate_local_shared_test.cpp  allocate_shared_alloc11_test.cpp  allocate_shared_array_construct_test.cpp  allocate_shared_array_esft_test.cpp  allocate_shared_array_noinit_test.cpp  allocate_shared_array_test.cpp  allocate_shared_array_throws_test.cpp  allocate_shared_array_value_test.cpp  allocate_shared_arrays_test.cpp  allocate_shared_construct11_test.cpp  allocate_shared_esft_test.cpp  allocate_shared_test.cpp  allocate_unique_aggregate_test.cpp  allocate_unique_args_test.cpp  allocate_unique_array_noinit_test.cpp  allocate_unique_array_test.cpp  allocate_unique_array_value_test.cpp  allocate_unique_construct_test.cpp  allocate_unique_throws_test.cpp  array_fail_ap_spa_a.cpp  array_fail_ap_spa_c.cpp  array_fail_ap_spa_ma.cpp  array_fail_ap_spa_mc.cpp  array_fail_array_access.cpp  array_fail_dereference.cpp  array_fail_member_access.cpp  array_fail_sp_spa_a.cpp  array_fail_sp_spa_c.cpp  array_fail_sp_spa_ma.cpp  (+228 more)
tests/smart_ptr2/: CMakeLists.txt  main.cpp
tools/: gl3w_gen.py  opengl-regostry-crawler.js  webgl-2d-soft-shadow.html
(+67 files in other folders)
